validator_derive_tests/tests/compile-fail/range/no_args.rs
use validator::Validate;

#[derive(Validate)]
struct Test {
    #[validate(range())]
    s: i32,
}

fn main() {}
